--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "dev": "next",
     "start": "next start",
     "sitemap": "node scripts/generate-sitemap.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,json,md}\""
   },
   "repository": {
     "type": "git",
@@ -68,6 +72,7 @@
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
